[gd_scene load_steps=7 format=3 uid="uid://de5n37s7ivoq6"]

[ext_resource type="Texture2D" uid="uid://c8ag7tlvtsnyu" path="res://assets/terrain/nature_tiles.png" id="1_iej71"]
[ext_resource type="Script" path="res://scripts/combat/combat_map.gd" id="2_dfckw"]
[ext_resource type="PackedScene" uid="uid://dyw8duvfrq3mb" path="res://scenes/combat_skill_ui.tscn" id="3_adxe2"]
[ext_resource type="PackedScene" uid="uid://ciy8p71a260ti" path="res://scenes/turn_order_ui.tscn" id="4_bte5q"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p72ej"]
texture = ExtResource("1_iej71")
margins = Vector2i(7, 0)
separation = Vector2i(12, 0)
texture_region_size = Vector2i(1098, 1280)
0:0/next_alternative_id = 10
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0.783523, 0.783523, 0.783523, 1)
0:0/2 = 2
0:0/2/modulate = Color(0.400698, 0.400698, 0.400698, 1)
0:0/3 = 3
0:0/3/modulate = Color(1, 0.646115, 0.612919, 1)
0:0/4 = 4
0:0/4/modulate = Color(0.999992, 0.39293, 0.367945, 1)
0:0/5 = 5
0:0/5/modulate = Color(0.677228, 0.0840163, 2.88785e-07, 1)
0:0/8 = 8
0:0/8/modulate = Color(0, 0.8428, 0, 1)
0:0/7 = 7
0:0/7/modulate = Color(1.39579e-06, 0.897686, 6.16074e-06, 1)
0:0/6 = 6
0:0/6/modulate = Color(0.513678, 1, 0.48175, 1)
1:0/0 = 0
2:0/0 = 0
21:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
12:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0

[sub_resource type="TileSet" id="TileSet_l6rux"]
tile_shape = 3
tile_size = Vector2i(1098, 1280)
sources/22 = SubResource("TileSetAtlasSource_p72ej")

[node name="map" type="TileMap"]
z_index = -100
position = Vector2(-27, -27)
scale = Vector2(0.2, 0.2)
tile_set = SubResource("TileSet_l6rux")
format = 2
layer_0/tile_data = PackedInt32Array(1, 65558, 0, 65537, 22, 0, 131074, 22, 0, 196610, 22, 0, 262147, 65558, 0, 327683, 65558, 0, 327684, 65558, 0, -65532, 65558, 0, -65533, 65558, 0, 3, 65558, 0, 2, 65558, 0, 65538, 65558, 0, 131075, 22, 0, 196611, 22, 0, 196613, 65558, 0, 196614, 22, 0, 131078, 22, 0, 65542, 22, 0, 6, 65558, 0, -65531, 65558, 0, 4, 65558, 0, 65539, 22, 0, 131076, 22, 0, 262148, 65558, 0, 262149, 65558, 0, 131079, 22, 0, 65543, 22, 0, 8, 65558, 0, -65529, 65558, 0, -65530, 65558, 0, 5, 65558, 0, 65541, 22, 0, 7, 65558, 0, 131077, 22, 0, 65540, 22, 0, 327685, 65558, 0, 327686, 65558, 0, 262150, 65558, 0, 327687, 65558, 0, 327688, 65558, 0, 262151, 65558, 0, 262152, 65558, 0, 262153, 65558, 0, 196616, 65558, 0, 131080, 65558, 0, 196615, 22, 0, 9, 65558, 0, -65528, 65558, 0, 131081, 65558, 0, -65534, 65558, 0, -65535, 65558, 0, -65536, 65558, 0, 0, 65558, 0, 131071, 65558, 0, 131072, 65558, 0, 262143, 65558, 0, 262144, 65558, 0, 393215, 65558, 0, 65536, 22, 0, 131073, 22, 0, 196608, 22, 0, 196609, 22, 0, 262145, 65558, 0, 327680, 65558, 0, 327681, 65558, 0, 262146, 65558, 0, 327682, 65558, 0, -1, 65558, 0, 327679, 65558, 0, 196607, 65558, 0, 65535, 65558, 0, 196612, 22, 0, 65544, 65558, 0)
script = ExtResource("2_dfckw")

[node name="characters" type="Node2D" parent="."]
z_index = 1

[node name="player_characters" type="Node2D" parent="characters"]

[node name="enemies" type="Node2D" parent="characters"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="skill_ui" parent="UI" instance=ExtResource("3_adxe2")]

[node name="turn_order_ui" parent="UI" instance=ExtResource("4_bte5q")]
offset_top = 21.0
offset_bottom = 156.0
